Fixed some overlapping container and styling issues.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --main-color: rgb(15, 23, 42);;
+    --secondary-color: rgb(255, 255, 255);
+    --font-family: "Roboto", sans-serif;
+    
+}
+
+
 /*
 -extra large devices (large laptops and desktops, 1200px and up)
 */
@@ -14,12 +22,12 @@
     html, body {
         display: flex;
         flex-direction: row;
-        width: 100%;
-        min-height: 100vh;
+        width: auto;
         margin: 0;
-        font-family: "Roboto", sans-serif;
+        font-family: var(--font-family);
         color: rgb(255, 255, 255);
         background: rgb(15, 23, 42);
+        
     }
 
     body::-webkit-scrollbar {
@@ -33,19 +41,18 @@
 
     #container {
         display: flex;
-        padding-left: 10rem;
-        padding-right: 10rem;
-        gap: 1rem;
+        height: 100vh;
     }
 
     #left {
-        flex: 1;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         position: sticky;
         width: 40%;
-        height: 100vh;
         top: 0;
+        padding-left: 6rem;
+        
     }
 
     #left::-webkit-scrollbar {
@@ -58,6 +65,7 @@
         position: sticky;
         width: 60%;
         overflow: auto;
+        padding-right:6rem;
     }
 
     #right::-webkit-scrollbar {
@@ -68,8 +76,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        border-bottom: none;
+        border-bottom: none;        
     }
 
 
@@ -77,7 +84,7 @@
         display:flex;
         flex-direction: column;
         align-items: flex-start;
-
+        margin-top: 5em;
     }
 
     .section-title {
@@ -122,14 +129,6 @@
                             HERO SECTION
     ******************************************************************************/
 
-    #hero-section {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        border-bottom: none;
-        padding: 2em;
-    }
-
     #hero-title {
         font-size: 4em;
         color: rgb(226 232 240);
@@ -145,8 +144,8 @@
 
     #hero-button-container {
         display: inline-block;
-        margin-top: 12em;
         padding-right: 1em;
+        margin-bottom: 5em;
     }
 
     #nav-menu {
@@ -184,34 +183,14 @@
     /******************************************************************************
                             ABOUT ME SECTION
     ******************************************************************************/
-
-    #about-section {
-    }
-
-    #about-content-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        width: 100%;
-    }
-
-    #about-intro-content {
-        border: 2px, teal, solid;
-        border-radius: 0.5em;
-        padding: 1em;
-        box-shadow: 5px 5px;
-        margin: 1em;
-        color: teal;
-    }
-
+   
     #about-description-content {
         border: 2px, teal, solid;
         border-radius: 0.5em;
-        padding: 1em;
-        margin: 1em;
         box-shadow: 5px 5px;
+        padding: 1em;
         color: teal;
+        
     }
 
 
@@ -221,15 +200,13 @@
 
     #skills-section {
         
+        
     }
 
     #skills-content-container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 1em;
-        margin: 1em;  
+        gap: 2em;
     }
 
     #skill-languages-container {
@@ -238,12 +215,11 @@
         align-items: flex-start;
         justify-content: center;
         padding: 1em;
-        margin: 1em;
         border: 2px, teal, solid;
         border-radius: 0.5em;
         box-shadow: 5px 5px;
         color: teal;
-        width: 100%;
+        
     }
 
     #skill-icons-container {
@@ -255,7 +231,7 @@
         border-radius: 0.5em;
         box-shadow: 5px 5px;
         color: teal;
-        width: 100%;
+        
     }
 
     .skill-icons-row {
@@ -298,14 +274,11 @@
     #projects-container {
         display: flex;
         flex-direction: column;
-        margin: 1em;
-        padding: 1em;
-        margin-left: 1em;
-        width: 100%;
+        gap: 2em;
+        margin-bottom: 5em;
     }
 
     .project-container {
-        margin: 1em;
         padding: 1em;
         border: 0.1em, teal, solid;
         border-radius: 0.5em;
@@ -314,6 +287,7 @@
         align-items: center;
         box-shadow: 5px 5px;
         color: teal;
+        
         
 
     }
